<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">可口可乐读卡器</string>
    <string name="device_connect">设备连接</string>
    <string name="device_info">设备信息</string>
    <string name="sync_time">同步时间</string>
    <string name="username">用户名:</string>
    <string name="password">密码:</string>
    <string name="old_password">原密码:</string>
    <string name="new_password">新密码:</string>
    <string name="re_password">再输入一次:</string>
    <string name="chanage_username">改名称</string>
    <string name="chanage_password">改密码</string>
    <string name="deivece_manager">设备管理</string>
    <string name="tag_read">标签读取</string>
    <string name="data_select">数据查询</string>
    <string name="read_start">开始读取</string>
    <string name="read_end">停止读取</string>
    <string name="pick_record">提取记录</string>
    <string name="export_record">导出记录</string>
    <string name="to">至</string>
    <string name="empty_data">清空</string>
    <string name="select">查询</string>
    <string name="choose_date">选择日期</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="update_info">修改个人信息</string>
    <string name="old_error">原密码输入错误！</string>
    <string name="re_error">两次输入密码不一致！</string>
    <string name="empty_password">密码位数不对，请输入4位</string>
    <string name="card_no">标签</string>
    <string name="card_time">时间</string>
    <string name="card_count">次数</string>
    <string name="device_s_n">S/N号码</string>
    <string name="bluetooth_name">蓝牙名称</string>
    <string name="bluetooth_pass">蓝牙密码</string>
    <string name="bluetooth_date">设备的日期</string>
    <string name="device_connect_success">设备连接成功</string>
    <string name="sync_time_sucess">同步时间成功</string>
    <string name="sync_time_fail">同步时间失败</string>
    <string name="pick_record_success">提取记录成功</string>
    <string name="pick_record_fail">提取记录失败</string>
    <string name="export_data_success">导出数据成功</string>
    <string name="export_data_fail">导出数据失败</string>
    <string name="get_device_info_fail">获取信息失败</string>
    <string name="tip">提示</string>
    <string name="question_exit">您确定要退出程序?</string>
    <string name="search_bluetooth">蓝牙搜索</string>
    <string name="card_seq">序列号</string>
    <string name="device_bluetooth">当前设备不支持蓝牙</string>
    <string name="device_connected">设备已连接</string>
    <string name="device_connect_fail">设备连接失败</string>
    <string name="device_connecting">设备正在连接...</string>
    <string name="device_connect_unknow">设备未连接</string>
    <string name="version_number">版本号</string>
    <string name="device_coding">设备编码</string>
    <string name="device_time">设备时间</string>
    <string name="start_read_data">开始读取数据</string>
    <string name="end_read_data">结束读取数据</string>
    <string name="start_pick_record">开始提取数据</string>
    <string name="no_data_to_export">没有数据可以导出</string>
    <string name="update_username_success">用户名修改成功</string>
    <string name="update_username_fail">用户名修改失败</string>
    <string name="update_password_success">密码修改成功</string>
    <string name="update_password_fail">密码修改失败</string>
    <string name="file_save_path">文件保存在：</string>
    <string name="clear">清除记录</string>
    
    <string name="message">记录尚未保存，您确定要清除记录？清除后记录不能还原，慎重操作。</string>
    <string name="warm_titlea">警告</string>

</resources>