<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_2"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginLeft="30dip"
    android:layout_marginRight="30dip"
    android:layout_marginTop="30dip"
    android:visibility="gone" >

    <TableLayout 
        android:id="@+id/tablayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shrinkColumns="1" 
        android:layout_centerHorizontal="true"
         >

        <TableRow >

            <Button android:layout_marginLeft="20dip"
                android:id="@+id/readStart"  android:background="@drawable/usebtn"
                android:text="@string/read_start" 
                android:layout_weight="1"/>

            <Button android:layout_marginLeft="20dip"
                android:id="@+id/readEnd" android:background="@drawable/usebtn"
                android:text="@string/read_end" 
                 android:layout_weight="1"/>
        </TableRow>

        <TableRow android:layout_marginTop="15dip" >

            <Button android:layout_marginLeft="20dip"
                android:id="@+id/pickRecord" android:background="@drawable/usebtn"
                android:text="@string/pick_record" 
                android:layout_weight="1"/>

            <Button  android:layout_marginLeft="20dip"
                android:id="@+id/exportRecode" android:background="@drawable/usebtn"
                android:text="@string/export_record"
                android:layout_weight="1" />
        </TableRow>
    </TableLayout>

    <TableLayout
        android:id="@+id/info_title2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tablayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dip"
        android:shrinkColumns="0" >
    </TableLayout>

   <ListView android:id="@+id/info2"
       android:layout_centerHorizontal="true"
       android:layout_below="@+id/info_title2"
       android:layout_width="fill_parent"
        android:background="#FFFFFF" 
        android:layout_height="fill_parent">
   </ListView>

       <TextView android:id="@+id/clear_data"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentBottom="true"
           android:layout_alignParentRight="true"
           android:background="@drawable/usebtn"
           android:gravity="center"
           android:textColor="#000000"
           android:layout_marginBottom="20dip"
           android:text="@string/clear"/>
       
</RelativeLayout>