<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:minWidth="400dip" >

    <TableLayout 
        android:id="@+id/tablayout" 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:gravity="center_vertical"
         >

        <TableRow>

            <TextView 
                style="@style/textviewstyle" android:gravity="center"
                android:text="@string/username" />
            <EditText
                android:id="@+id/update_username"
                style="@style/textviewstyle" android:textColor="#000000"
                android:minWidth="200dip"/>
        </TableRow>

        <TableRow>

            <TextView 
                style="@style/textviewstyle" android:gravity="center"
                android:text="@string/old_password" />
            <EditText android:textColor="#000000"
                android:id="@+id/old_password"
                style="@style/textviewstyle"
                android:minWidth="200dip"
                android:password="true" 
                android:maxLength="4"
                />
        </TableRow>

        <TableRow >

            <TextView 
                style="@style/textviewstyle" android:gravity="center"
                android:text="@string/new_password" />
            <EditText android:textColor="#000000"
                android:id="@+id/new_password"
                style="@style/textviewstyle"
                android:minWidth="200dip"
                android:password="true" />
        </TableRow>

        <TableRow >

            <TextView
                style="@style/textviewstyle" android:gravity="center"
                android:text="@string/re_password" />
            <EditText android:textColor="#000000"
                android:id="@+id/update_password"
                style="@style/textviewstyle"
                android:minWidth="200dip"
                android:password="true" />
        </TableRow>
    </TableLayout>

</LinearLayout>