<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_3"
    style="@style/textFont"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginLeft="30dip"
    android:layout_marginRight="30dip"
    android:layout_marginTop="30dip"
    android:visibility="gone" >

    <LinearLayout
        android:id="@+id/cal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/dateStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:editable="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/to" />

        <EditText
            android:id="@+id/dateEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:editable="false" />
    </LinearLayout>

    <TableLayout
        android:id="@+id/tablayout3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cal"
        android:layout_gravity="center_vertical"
        android:shrinkColumns="1" >

        <TableRow >

            <Button
                android:id="@+id/empthData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.3"
                android:text="@string/empty_data" />

            <Button
                android:id="@+id/dataSelect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/data_select" />
        </TableRow>
    </TableLayout>
 <TableLayout
        android:id="@+id/info_title3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tablayout3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dip"
        android:shrinkColumns="0" >
    </TableLayout>
    <ListView
        android:id="@+id/info3"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/info_title3"
        android:layout_marginBottom="20dip"
        android:layout_marginTop="20dip"
        android:background="#FFFFFF" >
    </ListView>

</RelativeLayout>